--- a/index.html
+++ b/index.html
@@ -103,9 +103,15 @@
             <div class="container">
                 <h2 class="services-title">Чем мы занимаемся</h2>
                     <ul class="services-list">
-                        <li class="services-list-item"><img src="./images/img1.jpg" alt="Делаем HTML-разметку страницы" width="370"></li>
-                        <li class="services-list-item"><img src="./images/img2.jpg" alt="Оптимизируем сайт под работу на телефонах и компьютерах" width="370"></li>
-                        <li class="services-list-item"><img src="./images/img3.jpg" alt="Делаем веб-дизайн страницы" width="370"></li>
+                        <li class="services-list-item"><img src="./images/img1.jpg" alt="Делаем HTML-разметку страницы" width="370">
+                            <h3 class="services-description">Десктопные приложения</h3>
+                        </li>
+                        <li class="services-list-item"><img src="./images/img2.jpg" alt="Оптимизируем сайт под работу на телефонах и компьютерах" width="370">
+                            <h3 class="services-description">Мобильные приложения</h3>
+                        </li>
+                        <li class="services-list-item"><img src="./images/img3.jpg" alt="Делаем веб-дизайн страницы" width="370">
+                            <h3 class="services-description">Дизайнерские решения</h3>
+                        </li>
                     </ul>
             </div>
         </section>
