Добавляет оверлей и переходы карточкам в секции "Портфолио"

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,15 +60,25 @@
 
         <ul class="portfolio-list">
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img8.jpg" alt="Изображение веб-сайта" width="370" />
-            <div class="cards-container">
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img8.jpg" alt="Изображение веб-сайта" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              <div class="cards-container">
               <h2 class="project-title">Технокряк</h2>
             <p class="project-description">Веб-сайт</p>
             </div>
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img9.jpg" alt="Изображение постера" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+              <img src="./images/img9.jpg" alt="Изображение постера" width="370" />
+              <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
             <p class="project-description">Дизайн</p>
@@ -76,7 +86,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img10.jpg" alt="Изображение приложения" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+              <img src="./images/img10.jpg" alt="Изображение приложения" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Ресторан Seafood</h2>
             <p class="project-description">Приложение</p>
@@ -84,7 +99,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img11.jpg" alt="Изображение проекта" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img11.jpg" alt="Изображение проекта" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Проект Prime</h2>
             <p class="project-description">Маркетинг</p>
@@ -92,7 +112,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img12.jpg" alt="Изображение приложения" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img12.jpg" alt="Изображение приложения" width="370" /> 
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Проект Boxes</h2>
             <p class="project-description">Приложение</p>
@@ -100,7 +125,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img13.jpg" alt="Изображение веб-сайта" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img13.jpg" alt="Изображение веб-сайта" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Inspiration has no Borders</h2>
             <p class="project-description">Веб-сайт</p>
@@ -108,7 +138,12 @@
           </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img14.jpg" alt="Изображение издания" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img14.jpg" alt="Изображение издания" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Издание Limited Edition</h2>
             <p class="project-description">Дизайн</p>
@@ -116,7 +151,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img15.jpg" alt="Изображение проекта" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img15.jpg" alt="Изображение проекта" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Проект LAB</h2>
             <p class="project-description">Маркетинг</p>
@@ -124,7 +164,12 @@
             </a>
           </li>
           <li class="portfolio-list-item">
-            <a href="" class="project-link"><img src="./images/img16.jpg" alt="Изображение приложения" width="370" />
+            <a href="" class="project-link">
+              <div class="project-overlay">
+                <img src="./images/img16.jpg" alt="Изображение приложения" width="370" />
+                <p class="project-overlay-description">Технокряк это современная площадка распространения коронавируса. Компании
+                  используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
             <div class="cards-container">
               <h2 class="project-title">Growing Business</h2>
             <p class="project-description">Приложение</p>
