--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <!-- Разметка модального окна -->
+    <button data-modal-open>Заказать услугу</button>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor et aut placeat impedit cum maiores nam, illum accusantium, voluptatibus perspiciatis iste saepe, provident possimus at distinctio sequi ad modi! Qui.
+            </p>
+            <button data-modal-close>Закрыть</button>
+        </div>
+    </div>
     <!-- Разметка Header -->
     <header class="header">
         <div class="container  container-flex">
