Подключает скрипт modal.js

--- a/portfolio.html
+++ b/portfolio.html
@@ -246,5 +246,7 @@
         </div>
       </div>
     </footer>
+    <!-- Подключение скрипта modal.js -->
+    <script src="./modal.js"></script>
   </body>
 </html>
