--- a/index.html
+++ b/index.html
@@ -426,5 +426,7 @@
             </div>
         </div>
     </footer>
+    <!-- Подключение скрипта modal.js -->
+    <script src="./modal.js"></script>
 </body>
 </html>
