--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <!-- Разметка модального окна -->
-    <button data-modal-open>Заказать услугу</button>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor et aut placeat impedit cum maiores nam, illum accusantium, voluptatibus perspiciatis iste saepe, provident possimus at distinctio sequi ad modi! Qui.
@@ -57,7 +56,7 @@
         <!-- Разметка блока-героя либо баннера -->
         <section class="hero">
             <h1 class="hero-title">Эффективные решения<br/> для вашего бизнеса</h1>
-            <button type="button" class="button-primary">Заказать услугу</button>
+            <button data-modal-open type="button" class="button-primary">Заказать услугу</button>
         </section>
         <!-- Разметка секции "Особенности" -->
         <section class="section">
