--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!-- Разметка модального окна -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor et aut placeat impedit cum maiores nam, illum accusantium, voluptatibus perspiciatis iste saepe, provident possimus at distinctio sequi ad modi! Qui.
-            </p>
-            <button data-modal-close>Закрыть</button>
+            <button class="btn-modal-close" data-modal-close>
+                <svg class="close-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close">
+                    </use>
+                </svg>
+            </button>
         </div>
     </div>
     <!-- Разметка Header -->
